--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,9 +19,14 @@
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
+  name = "Research"
+  url = "research/"
+  weight = 50
+
+# [[main]]
+#   name = "Publications"
+#   url = "#featured"
+#   weight = 40
 
 [[main]]
   name = "Contact"
