--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -124,7 +124,7 @@ contact_links = [
 ############################
 
 # Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
-sharing_image = ""
+sharing_image = "avatar.jpg"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
 twitter = "aaronaddleman"
@@ -271,7 +271,7 @@ plugins_js  = ["plantuml-encoder.min", "plantuml.script"]
 ############################
 [marketing]
   google_analytics = "UA-31631239-1"
-  google_tag_manager = "UA-31631239-1"
+  google_tag_manager = "GTM-WP9V"
 
 ############################
 ## Content Management System
