--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "../../../../../../var/folders/03/jxxp7m611vn_fn_dmkxwkkvc0000gp/T/hugo_cache/modules/filecache/modules/pkg/mod/github.com/wowchemy/wowchemy-hugo-modules/wowchemy@v0.0.0-20210205224825-50d3d41e9e1a/assets/*"
+    "../../../../go/1.15.7/pkg/mod/github.com/wowchemy/wowchemy-hugo-modules/wowchemy@v0.0.0-20210205224825-50d3d41e9e1a/assets/*"
    ]
   }
  }
