--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -171,7 +171,7 @@ abstract_length = 135
 
 # Load JS plugins
 #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
-plugins_js  = ["plantuml-encoder.min", "plantuml.script"]
+#plugins_js  = ["plantuml-encoder.min", "plantuml.script"]
 
 # Avatars.
 # An avatar is an image that appears next to a user's name.
