--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -110,3 +110,6 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
     path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
   [[module.imports]]
     path = "github.com/wowchemy/wowchemy-hugo-modules/netlify-cms-academic"
+
+[security.funcs]
+getenv = ['^HUGO_', '^WC_POST_CSS' ]
