--- a/exampleSite/static/admin/config.yml
+++ b/exampleSite/static/admin/config.yml
@@ -301,3 +301,9 @@ collections:
             widget: "boolean"
             default: false
           - {label: "Body", name: "body", widget: "markdown"}
+security:
+  funcs:
+    getenv:
+      - ^HUGO_
+      - ^WC_
+      - WC_POST_CSS
